# mimic-interpreter

./: README.md  mini-c.cabal
examples/: bracketError.c  example.c  identKeywords.c  ifElse.c  ifError.c  panic.c  print.c  skip.c  while.c
examples_stdout/: bracketError.c  identKeywords.c  ifElse.c  ifError.c  panic.c  print.c  skip.c  while.c
src/: Main.hs  TestAll.hs  testall.hs
