cabal-version:      2.4
name:               mini-c
version:            2023

synopsis:           Mini-C interpreter
license:            Unlicense
author:             Alexandre Duchesne, Aristide Duhem

common common-all
     default-language: Haskell2010
     build-depends:    base ^>=4.17.0.0
                     , aeson
                     , bytestring
                     , containers
                     , extra
                     , generic-random
                     , ilist
                     , megaparsec
                     , mtl
                     , random
                     , random-shuffle
                     , process
                     , QuickCheck
                     , split
                     , text
                     , utf8-string
                     , vector
     ghc-options:      -Wall
                       -Wunticked-promoted-constructors
                       -Wno-name-shadowing
                       -Wno-unused-imports
                       -Werror
                       -Wwarn=missing-home-modules
     default-extensions: DataKinds
                         DeriveGeneric
                         DeriveFunctor
                         DuplicateRecordFields
                         FlexibleContexts
                         FlexibleInstances
                         MultiParamTypeClasses
                         NamedFieldPuns
                         LambdaCase
                         OverloadedRecordDot
                         OverloadedStrings
                         RecordWildCards
                         ScopedTypeVariables
                         TypeApplications

executable mini-c
    import:           common-all
    main-is:          Main.hs
    hs-source-dirs:   src

executable Main.hs
    import:           common-all
    main-is:          Main.hs
    hs-source-dirs:   src
